<resources>
    <string name="app_name">OpenFlux</string>
    <string name="app_subtitle">v1.0.2</string>
    <string name="title_settings">Настройки</string>
    <string name="title_split_tunnel">Раздельное туннелирование</string>
    <string name="title_logs">Журнал событий</string>

    <string name="mode_vpn">Режим VPN (Туннель)</string>
    <string name="mode_vpn_desc">Перехватывать трафик приложений через туннель</string>
    <string name="mode_proxy">Только SOCKS5 прокси</string>
    <string name="mode_proxy_desc">Без VPN. Запуск только локального прокси-сервера</string>

    <string name="status_disconnected">Отключено</string>
    <string name="status_connecting">Подключение...</string>
    <string name="status_connected">Подключено</string>
    <string name="status_error">Ошибка</string>

    <string name="btn_connect">ПОДКЛЮЧИТЬ</string>
    <string name="btn_disconnect">ОТКЛЮЧИТЬ</string>

    <string name="proxy_address_label">Адрес локального SOCKS5 прокси:</string>
    <string name="proxy_share_hint">Можно указать этот адрес в настройках SOCKS5 прокси приложений (Telegram, браузеры)</string>

    <!-- Settings -->
    <string name="pref_transport_title">Транспорт</string>
    <string name="transport_yandex">Yandex Docs</string>
    <string name="transport_vyandex">Yandex Volga</string>
    <string name="transport_cupsonline">Cups.online (Live Coding)</string>
    <string name="transport_mailru">Mail.ru Docs</string>
    <string name="transport_oneme">MAX Messenger</string>
    <string name="pref_yandex_url_title">Ссылка на Яндекс.Документ</string>
    <string name="pref_yandex_url_hint">https://disk.yandex.ru/i/...</string>
    <string name="pref_mailru_url_title">Ссылка на документ Mail.ru Cloud</string>
    <string name="pref_mailru_url_hint">https://cloud.mail.ru/public/...</string>
    <string name="pref_cups_rooms_title">Base64 комнаты Cups.online</string>
    <string name="pref_cups_rooms_hint">eyJyb29tcyI6WyI... (base64 строка)</string>
    <string name="pref_max_token_title">MAX Token</string>
    <string name="pref_max_uid_title">MAX User ID</string>
    <string name="pref_port_title">Порт SOCKS5 прокси</string>
    <string name="pref_listen_all_title">Разрешить доступ из локальной сети (0.0.0.0)</string>
    <string name="pref_listen_all_desc">Позволит другим устройствам в вашей Wi-Fi сети использовать этот телефон как прокси</string>
    <string name="pref_debug_title">Подробное логирование (Debug)</string>

    <!-- Split tunneling -->
    <string name="split_mode_hint">Режим разделения трафика</string>
    <string name="split_mode_whitelist">Туннелировать только выбранные</string>
    <string name="split_mode_blacklist">Туннелировать все, кроме выбранных</string>
    <string name="split_search_hint">Поиск приложений...</string>
    <string name="split_select_all">Выбрать все</string>
    <string name="split_deselect_all">Снять выбор</string>
    <string name="split_show_system">Показывать системные</string>

    <!-- Logs -->
    <string name="logs_clear">Очистить</string>
    <string name="logs_copy">Скопировать</string>
    <string name="logs_copied">Логи скопированы в буфер обмена</string>

    <string name="notif_channel_name">Служба OpenFlux</string>
    <string name="notif_proxy_running">Прокси запущен на порту %1$d</string>
    <string name="notif_vpn_running">VPN туннель активен (SOCKS5 :%1$d)</string>

    <!-- Quick Settings Tile -->
    <string name="qs_tile_label">OpenFlux</string>
    <string name="qs_tile_active">Подключено</string>
    <string name="qs_tile_inactive">Отключено</string>
</resources>
